# devtree

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml  licenserc.toml
.github/workflows/: ci.yml
fuzz/fuzz_targets/: fuzz_overlay.rs  fuzz_owned.rs  fuzz_parse.rs
src/: cursor.rs  error.rs  fdt.rs  header.rs  lib.rs  overlay.rs  owned.rs  writer.rs
tests/: adversarial.rs  error_display.rs  introspect.rs  memrsv.rs  merge.rs  overlay_errors.rs  owned.rs  parse.rs  phandle_errors.rs  roundtrip.rs
tests/common/: mod.rs
tests/data/: regenerate.sh
